--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,11 @@
 
     <div class="container">
       <canvas id="canvas" width="800" height="600"></canvas>
+      <div class="controls">
+        <form class="">
+
+        </form>
+      </div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
