--- a/src/index.html
+++ b/src/index.html
@@ -21,15 +21,22 @@
       <h1>Univesp Butterfly Animation</h1>
       <canvas id="canvas" width="800" height="600"></canvas>
       <div class="controls">
-        <form class="">
+        <form class="" data-bind="submit: submit">
           <label for="angle">Ângulo:</label>
-          <input id="angle" type="number" name="" value="45">
+          <input id="angle" type="number"
+            data-bind="value: thetaDeg,
+                       valueUpdate: true">
+
           <label for="v0">V<sub>0</sub>:</label>
-          <input id="v0"type="number" name="" value="85">
+          <input id="v0"type="number" data-bind="value: v0">
+
           <label for="x">x:</label>
-          <input id="x" type="text" name="" value="">
+          <input id="x" type="text" data-bind="value: x">
+
           <label for="y">y:</label>
-          <input id="y" type="text" name="" value="">
+          <input id="y" type="text" data-bind="value: yCart">
+
+          <input type="submit" value="Animar">
         </form>
       </div>
     </div>
